@@ -1,5 +1,6 @@
 UNRELEASED CHANGES:
 
+* Fix reset account deleting default account values
 * Fix notifications not working with aysnchronous queue
 * Support mysql unix socket
 
